SyntacticAnalyzer/tests/fail/while01.java
class foo {

	ctor (int n4)
		var boolean b1;
		var int n1, n2, n3;
		{
			while (n1 != b4 && b1 || true >= 5+4%2) {
				// falta condicion
				while() {
				
				}
			}

		}
}
